--- a/css/custom.css
+++ b/css/custom.css
@@ -90,19 +90,22 @@ a:hover {
 /*HEADER*/
 #cont_img_header {
   width: 100%;
-  height: 80vh;
+  /*height:80vh;*/
+  height: auto;
   background: url("../imgs/img_header_1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
-@media (min-width: 767px) {
-  #cont_img_header {
-    height: 100vh;
-  }
-}
 
 #home {
-  height: 80%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+@media (min-width: 992px) {
+  #home {
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+  }
 }
 
 .header_gallery_cntrl div {
@@ -223,8 +226,8 @@ button.btn-primary:active, a.btn-primary:active {
 }
 
 #barra-menu .navbar-toggler {
-  color: #162232;
-  border-color: #162232;
+  color: #fff;
+  border-color: #fff;
 }
 
 .card {
@@ -283,7 +286,7 @@ button.btn-primary:active, a.btn-primary:active {
 }
 
 .bi-list {
-  color: #162232;
+  color: #fff;
   width: 40px;
   height: 40px;
 }
