--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -14,7 +14,7 @@ body {
   font-size: $fontSizeDefault;
 }
 
-h1, h2,h3{color:$colorNegro;}
+h1, h2,h3{color:$color2;}
 
 .show_img{opacity:1; background-color:transparent; @include transition2; cursor:default;}
 
@@ -34,9 +34,11 @@ h1, h2,h3{color:$colorNegro;}
 
 .bgColor2{background-color: $color2;}
 
-.bgColorNegro{background-color: $colorNegro;}
+.bgColorNegro{background-color: $color2;}
 
 .bgColorBlanco{background-color: $colorBlanco;}
+
+.font-bold{font-family: FontBold;}
 
 ::selection{background-color:$color1;}
 
@@ -46,9 +48,8 @@ a{
 /*HEADER*/
     #cont_img_header{
            width:100%;
-           /*height:80vh;*/
-           height:auto;
-           background: url('../imgs/img_header_1.jpg');
+           height:auto; 
+           background-image: linear-gradient(to left, rgba(255,0,0,0), rgba(22, 34, 50, 0.5)), url('../imgs/img_header_1.jpg');
            background-repeat:no-repeat;
            background-size:cover;
     }
@@ -57,10 +58,13 @@ a{
         padding-top:1rem;
         padding-bottom:1rem;
         @media (min-width: 992px) {
-            padding-top:7rem;
-            padding-bottom:7rem;
+            padding-top:3rem;
+            padding-bottom:3rem;
         }
-
+        @media (min-width: 1200px) {
+            padding-top:5rem;
+            padding-bottom:5rem;
+        }
      } 
     .header_gallery_cntrl{
         div{
@@ -89,10 +93,6 @@ a{
     } 
 }
 
-.shadow-sm-white{
-    box-shadow: rgba(255,255,255,.5) 0px 1px 4px;
-}
-
 .header_thumbs_imgs div{
     border: 4px solid $colorBlanco;
     box-sizing: border-box;
@@ -112,6 +112,20 @@ a{
 
 #cont-all-header{
     border-bottom: 1px solid $colorBlanco;
+}
+
+.slogan-header{
+    font-size: $fontSizeDefault; 
+    @media (min-width: 575px) {
+        font-size: $fontSizeDefault * 1.3; 
+    }
+}
+
+.text-header{
+    font-size: $fontSizeDefault * 0.7; 
+    @media (min-width: 575px) {
+        font-size: $fontSizeDefault; 
+    }
 }
 
 button, a{
